--- a/66-FM1-59.md
+++ b/66-FM1-59.md
@@ -25,7 +25,7 @@ required or highly desirable for the mtssion. According to MIT estimates,
 the programs which had been identified as needed for the CSM on the AS-504 
 mission are in the order of 15,000 words in excess of the 36,000
 word computer. The LEM computer storage capacity was exceeded by about
-6,000 words for the LORS configuration and 4,5OO words for the radar configuration.
+6,000 words for the LORS configuration and 4,500 words for the radar configuration.
 
 Since we have assumed a basic ground rule that no routines would be included 
 in the AS-207/208 programs which are not in the AS-504 program,
@@ -76,22 +76,22 @@ command module guidance system would considerably relieve our computer
 storage problem. However, it has been directed by NASA Headquarters
 that this capability be provided. Accordingly, steps are being taken
 within MSC in an attempt to relieve this Headquarters requirement, which
-is primarily one of improving probability of mtssion success with indirect 
+is primarily one of improving probability of mission success with indirect 
 and hopeful acceptable implications on flight crew safety.
 
 4. Programs were being supplied to enable guidance system to execute 
 maneuvers necessary for inserting the spacecraft into orbit or
 for landing in a preselected launch abort area by use of a spacecraft
 SPS maneuver in the event of a late launch abort. These routines, which
-were origlnelly scheduled for AS-204 but were deleted from that flight
+were originally scheduled for AS-204 but were deleted from that flight
 due to schedule problems, were also deleted from the AS-504 program.
 This is more serious, however, since ground support of Saturn V aborts
 is more limited than for the 200 series missions.
 
-5. Several other actions were taken to relieve the storage problems_
+5. Several other actions were taken to relieve the storage problems,
 such as deleting some programs from the flight ropes which support preflight 
 pad tests. (It is not intended to delete the tests but rather
-to support them in another way. ) In addition, action designed to streamline 
+to support them in another way.) In addition, action designed to streamline 
 the program was initiated.
 
 6. Identified as the next programs to be deleted, if it turns out
