--- a/66-FM1-60.md
+++ b/66-FM1-60.md
@@ -123,7 +123,7 @@ the guidance system to compensate for it. RCS fuel would then be required
 to stop the rates.
 
 10. _Extra-vehicular Activity (EVA)_: The situation regarding EVA
-is still badly clouded. This is the case in terr_s of how many EVA exercises 
+is still badly clouded. This is the case in terms of how many EVA exercises 
 should be carried out, when they should be scheduled in the
 mission, whether the spacecraft should be docked or undocked, and, in
 fact, even includes what appears to be a need for re-evaluating the
