--- a/66-FM1-64.md
+++ b/66-FM1-64.md
@@ -19,7 +19,7 @@ orbits before LEM ascent, and the results will be used to establish
 orbital insertion conditions for the LEM launch targetting.
 
 Could you analyze the situation, determining how well the various
-orbital elements m_y be determined for the following data gathering
+orbital elements may be determined for the following data gathering
 periods: (a) one-half pass, starting from horizon to directly overhead, 
 (b) one complete pass from horizon to horizon, and (c) two
 complete passes from horizon to horizon. I am also interested in
@@ -31,7 +31,7 @@ to do the things in the way I understand it, but I certainly would appreciate
 it if you would make a rather abbreviated, order of magnitude
 type, analysis of this within the next couple of weeks in order to determine 
 whether it is even reasonable to include such a program in the
-LEM computer or alternatively if it mnst be modified to make it insensitive 
+LEM computer or alternatively if it must be modified to make it insensitive 
 to small bias and random errors in the radar data. I just can't
 help comparing this to a single radar station on the ground where conditions 
 are far superior and our results are not red hot.
