--- a/66-FM1-70.md
+++ b/66-FM1-70.md
@@ -14,7 +14,7 @@ subject, we really did not find out what we wanted to know. However,
 I am very encouraged to see the enhusiasm and vigor with which Ed
 Copps is attacking this problem.
 
-d has set June 3, 1966, as a target for getting out the first cut at
+Ed has set June 3, 1966, as a target for getting out the first cut at
 a Program Development Plan, which he is anxious to talk to us about
 during the following week. In fact, he intends to come down then not
 only to talk over the program as he has put it together but also to
@@ -51,7 +51,7 @@ three; although, of course, these estimates must be carefully examined
 to assure ourselves we are getting the correct picture.
 
 It is to be emphasized that we must look at the overall schedule situation 
-and not Just the program for a specific flight. There are obvious
+and not just the program for a specific flight. There are obvious
 interactions end trade-offs that could be made between the programs
 for AS-207/208 and those for AS-503 and AS-504. If all efforts to remain 
 within the flight schedule fail and the programs do become pacing
@@ -72,7 +72,7 @@ plane change capability, thereby avoiding the necessity of formulating
 and including these special guidance programs.
 
 2. Everyone at MIT seems to feel that the preparation of the Guidance 
-System Operations Plan (GSOP) is the most critical of al] items
+System Operations Plan (GSOP) is the most critical of all items
 since so much of the work must be delayed until this final definition
 of program requirements is finished. Accordingly, we will attempt to
 take all possible steps to assist MIT in this work, including having
