Fixed type (also trying out prose.io)

--- a/66-FM1-68.md
+++ b/66-FM1-68.md
@@ -1,10 +1,12 @@
 ---
 layout: tindallgram
 date: May 31 1966
-from: FM1/Assistant Chief, Mission Planning and Analysis Division
-serial: 66-FM1-68
+from: "FM1/Assistant Chief, Mission Planning and Analysis Division"
+serial: "66-FM1-68"
 subject: Apollo spacecraft computer program development newsletter
+published: true
 ---
+
 There are a number of us who feel that the computer programs for the 
 Apollo spacecraft will soon become the most pacing item for the Apollo 
 flights. This is certainly likely to be the case for AS-207/208, by 
@@ -17,7 +19,7 @@ of days every week to provide coordination between MIT and MSC. This
 memorandum is the first of a series I will be dispatching to briefly 
 inform you on what is going on.
 
-During the week of May 16, we put primary emphasis on managenent matters. 
+During the week of May 16, we put primary emphasis on management matters. 
 During that week, MIT put into effect a new Computer Program 
 Development organization. Basically, what they have done is to put
 Dr. Battin in charge of all computer programming, with four organizational 
