--- a/70-FA-T-12.md
+++ b/70-FA-T-12.md
@@ -32,7 +32,7 @@ have thoroughly tested it. Eyeball examination by other experts (MSC and TRW)
 and FMES testing at Grumman have revealed nothing questionable about it. MIT
 strongly advised making a new revised module 5.
 
-The question resolved to which is the greater risk - a new "immature" program
+The question resolves to which is the greater risk - a new "immature" program
 which may contain undiscovered deficiencies vs. a flight without automatic
 horizontal nulling. A toss-up.
 
