Escape list numbers
We don't want the numbered paragraphs to be interpreted as a markdown
list and indented, so escape the periods after the numbers.

--- a/67-FM-T-45.md
+++ b/67-FM-T-45.md
@@ -5,7 +5,7 @@ from: FM/Deputy Chief
 serial: 67-FM-T-45
 subject: Spacecraft computer program flow chart status
 ---
-1. Just a note to you cats who are interested in flow charts for the
+1\. Just a note to you cats who are interested in flow charts for the
 spacecraft computer programs. MIT has had a small group headed by John
 Venize who have done what appears to be an excellent job of
 establishing standards to be followed in the development of flow
@@ -20,7 +20,7 @@ to do those processors of most immediate interest first. Anyone
 interested in the actual schedule should get in touch with Jack
 Williams of the Flight Software Branch.
 
-2. I really think we've got this thing moving well now (finally!) and
+2\. I really think we've got this thing moving well now (finally!) and
 will be interested in your comments. It was our intention to set up
 some system of discrepancy reporting in which we will encourage you to
 participate. The intent is to inform MIT people of differences between
