--- a/66-FM1-131.md
+++ b/66-FM1-131.md
@@ -6,9 +6,9 @@ serial: 66-FM1-131
 subject: More on Program Development
 ---
 On October 5th, we had the second of our weekly all day program development 
-plan meetings at MIT. Most of our attention was ·given to the open
-items on the AS-278 program which I will discuss later: but first I
-would like to pass on some general comments regarding the Work at MIT.
+plan meetings at MIT. Most of our attention was given to the open
+items on the AS-278 program which I will discuss later, but first I
+would like to pass on some general comments regarding the work at MIT.
 Based on their intensive planning over the last couple of weeks, it
 appears that staffing for program formulation (Norm Sears' area) and
 for program coding, integration, and check out (Ed Copps' area) is now
@@ -35,7 +35,7 @@ out the projected schedule of its use based both on the current facility
 and in the augmented facility which I have described previously. It is
 our intention to continue the development of the justification for augmenting 
 this facility for presentation to our management at MSC, probably
-around October 22nd. It is Phil Felleman's estimte that this equipment
+around October 22nd. It is Phil Felleman's estimate that this equipment
 could be operational by about February 15, provided they get the go-ahead 
 by the first of November.
 
@@ -50,13 +50,13 @@ has been carried out at MSC leading to the desire to change that
 formulation. It is my understanding that Guidance and Control Division
 has dispatched the additional information MIT needs to develop this
 spacecraft capability to MSC's satisfaction. MIT has been directed to
-prepare an MRDB -- our change control document defining the work to be
+prepare an MDRB -- our change control document defining the work to be
 done and the schedule impact if it is to be done.
 
 2. Trans-lunar injection (TLI). Guidance of the SIVB by the
 command module computer for a simulation of the TLI maneuver on AS-503
 has been proposed. The objective here is to test the interfaces of the
-spacecraft withthe SIVB; it is not considered essential to check out
+spacecraft with the SIVB; it is not considered essential to check out
 actual TLI guidance equations, although that would be desirable. Since
 this is the case, it is possible to utilize to a large extent either
 the external ΔV or Lambert guidance programs already available in the
