--- a/70-FA-T-13.md
+++ b/70-FA-T-13.md
@@ -77,8 +77,8 @@ the docked configuration.
 
 We also assigned some action items:
 
-a. Make sure there is no special problem involved in aligning the
-CSM IMU prior to launch from a Saturn I-B, rather than a Saturn V pad. (Charley Parker, FCD).
+a. Make sure there is no special problem involved in aligning the CSM IMU prior
+to launch from a Saturn I-B, rather than a Saturn V pad. (Charley Parker, FCD).
 
 b. Verify the interface from the CMC to the Saturn IU is identical to Saturn V
 to make sure our P11 program is all right. (Tom Lins, GCD)
@@ -91,7 +91,8 @@ d. Prepare a complete PCR identifying the functional requirements for the docked
 DAP. This big job, of course, is the responsibility of the GCD and Tom Lins will
 see that it gets done.
 
-e. Jack Williams will get everyone concerned together to scrub the telemetry downlist, identifying spares and additions, if any.
+e. Jack Williams will get everyone concerned together to scrub the telemetry
+downlist, identifying spares and additions, if any.
 
 I think everyone at the meetings agreed that we are in pretty good shape with
 respect to the definition of the AAP programs and should have little trouble in
