--- a/70-PA-T-11A.md
+++ b/70-PA-T-11A.md
@@ -5,6 +5,8 @@ from: PA/Chief, Apollo Data Priority Coordination
 serial: 70-PA-T-11A
 subject: Mission H-2 and Subsequent Lunar Orbit Activities
 ---
-Attached is your copy of the Apollo Mission Techniques Document for the Mission H-2 and Subsequent Lunar Orbit Activities.
+Attached is your copy of the Apollo Mission Techniques Document for the Mission
+H-2 and Subsequent Lunar Orbit Activities.
 
-No further Mission Techniques documentation is planned after the Apollo 13 mission.
+No further Mission Techniques documentation is planned after the Apollo 13
+mission.
