Added underlines in 66-FM1-115

--- a/66-FM1-115.md
+++ b/66-FM1-115.md
@@ -41,7 +41,7 @@ additional program requirements to the 206 program. It is our intention
 to direct MIT to give the identified processors, which theoretically are
 already needed in the AS-208 program, highest possible priority such that
 they may be added to the 206 program at the most opportune time. It
-appears certain that they will have to be added at some time; e.g., it
+appears certain that they _will_ have to be added _at some time_; e.g., it
 appears certain a program must be developed to support this type of a
 flight. There is some question, however, as to whether the 206 program
 as currently defined is needed since the modified program should be able
