Quote line in YAML with a colon

--- a/66-FM1-111.md
+++ b/66-FM1-111.md
@@ -1,7 +1,7 @@
 ---
 layout: tindallgram
 date: Sep 21 1966
-to: FM2/Flight Software Branch Attention: T. F. Gibson, Jr.
+to: "FM2/Flight Software Branch Attention: T. F. Gibson, Jr."
 from: FM1/Deputy Chief, Mission Planning and Analysis Division
 serial: 66-FM1-111
 subject: Rendezvous search modes of various types
