--- a/66-FM1-129.md
+++ b/66-FM1-129.md
@@ -10,16 +10,16 @@ tags:
     - AS-504
     - AS-278
 ---
-One of the possible actions which has been identified to help our space-
-craft computer program development schedule is to fly the AS-503 mission
+One of the possible actions which has been identified to help our spacecraft
+computer program development schedule is to fly the AS-503 mission
 with the AS-278 programs.  I have indicated in previous memoranda that
 in order to do this we would probably have to add several routines to the
 AS-278 program to make it applicable to AS-503.  However, as we have
 studied this matter in more detail, we have arrived at a point where only
 one routine is still considered a candidate -- some guidance of the SIVB
-simulating TLI.  This is a command module program.  There are no addi-
-tions contemplated for the LGC.  Those interested in exactly what capa-
-bility would be available are referred to the AS-278 GSOP.
+simulating TLI.  This is a command module program.  There are no additions
+contemplated for the LGC.  Those interested in exactly what capability
+would be available are referred to the AS-278 GSOP.
 
 I am sure if we proceed in this way that it will have some impact on
 establishment of the final mission requirements, and in turn will influence
@@ -80,7 +80,7 @@ _LGC_
 Finally, I suppose I ought to add the following remark based strictly on
 my own intuition -- namely, we have almost certainly got a computer
 storage problem on the AS-504 programs again if all the above items are
-added to the AS-278 program, particuarly with all of the special flexi-
-bilities and options which will be suggested.  Therefore, the fact that
+added to the AS-278 program, particuarly with all of the special flexibilities
+and options which will be suggested.  Therefore, the fact that
 your favorite processors are listed above does not necessarily mean that
 we will be able to get them all in.
