--- a/66-FM1-129.md
+++ b/66-FM1-129.md
@@ -24,7 +24,7 @@ would be available are referred to the AS-278 GSOP.
 I am sure if we proceed in this way that it will have some impact on
 establishment of the final mission requirements, and in turn will influence
 how certain of the spacecraft capabilities for the lunar mission must be
-tested prior to making the AS-504 flight.  I would like to call you
+tested prior to making the AS-504 flight.  I would like to call your
 attention particularly to the fact that we shall have no navigation (orbit
 determination) capability other than that associated with rendezvous for
 the AS-278 and AS-503 missions, nor will we have the ascent or descent
