--- a/66-FM1-114.md
+++ b/66-FM1-114.md
@@ -12,20 +12,20 @@ tags:
     - MIT
 ---
 I am afraid there is a bit of confusion as to what navigation modes are
-being provided in the AS-503 and AS-504 Apollo spacecraft computer pro-
-grams.  I am sure I have contributed to this confusion myself, and the
+being provided in the AS-503 and AS-504 Apollo spacecraft computer programs.
+I am sure I have contributed to this confusion myself, and the
 purpose of this memorandum is to try and clear it all up.
 
-According to Norm Sears, it is intended to provide the following navi-
-gation; that is, onboard orbit determination programs in the AS-504
+According to Norm Sears, it is intended to provide the following navigation;
+that is, onboard orbit determination programs in the AS-504
 command module computer program:
 
 a.  During earth orbital operations there shall be no onboard
 navigational capabilities at all.
 
 b.  During the trans-lunar and trans-earth phases the navigation
-program is being formulated to process both star/landmark and star/
-horizon measurements.  The landmarks and horizon may be either earth or
+program is being formulated to process both star/landmark and star/horizon
+measurements.  The landmarks and horizon may be either earth or
 lunar at the choice of the flight crew.  That is, there is no interlock
 governing which is used depending on position of the spacecraft relative
 to those two bodies.  The pilot must manually key in location of the
@@ -38,16 +38,16 @@ landmarks referenced to the platform.  Twenty-eight landmarks will be
 stored in the computer program, but I am certain others may be keyed in
 if the crew desires.
 
-For the AS-503 mission, it is currently intended to have only one naviga-
-tion mode - namely, use of star/landmark or star/horizon observations.
+For the AS-503 mission, it is currently intended to have only one navigation
+mode - namely, use of star/landmark or star/horizon observations.
 The landmarks and horizon used are restricted to earth only since it is
 not intended to have such routines as the lunar ephemeris, lunar rotation,
 etc., programs available.  Earth landmarks must be keyed in manually by
 the crew.  Norm Sears (MIT) points out that use of this data in orbits of
 the type currently planned for AS-503 may actually result in degradation
 of the onboard state vector, and as a result it may be necessary to
-restrict this process to a spacecraft system test rather than an opera-
-tional procedure in support of the mission.
+restrict this process to a spacecraft system test rather than an operational
+procedure in support of the mission.
 
 I suppose, to make this entirely complete, I should also list here the
 processing of the command module sextant data for rendezvous navigation,
