Dehyphenate and fix typo

--- a/66-FM1-113.md
+++ b/66-FM1-113.md
@@ -16,10 +16,10 @@ propulsion and guidance on the AS-503 mission.  However, it is not
 possible to use the same guidance equations on AS-503 as will be used
 on the AS-504 lunar descent.  This is due to obvious differences of an
 earth orbital mission compared to an actual descent on the moon's surface.
-The gravitational potention is different; the objective of the maneuver
+The gravitational potential is different; the objective of the maneuver
 is different; there is nothing for the lunar landing radar to bounce
-signals off of, etc.  Accordingly it is MIT's intention, with our con-
-currence, to omit certain vital parts of the AS-504 descent guidance
+signals off of, etc.  Accordingly it is MIT's intention, with our concurrence,
+to omit certain vital parts of the AS-504 descent guidance
 program from the AS-503 mission.  The purpose of this memo is to make
 sure that you all know this.
 
