Requote quotes in YAML header and fix typo

--- a/68-PA-T-138A.md
+++ b/68-PA-T-138A.md
@@ -3,7 +3,7 @@ layout: tindallgram
 date: Jun 25 1968
 from: PA/Chief, Apollo Data Priority Coordination
 serial: 68-PA-T-138A
-subject: \"C\" Rendezvous W-Matrix
+subject: "\"C\" Rendezvous W-Matrix"
 tags:
     - MIT
     - rendezvous
@@ -16,7 +16,7 @@ the W-Matrix when reinitializing (after three marks of the last
 batch of marks between NSR and PTI) as are used initially.  That
 is, it is not necessary for the crew to punch new values into the
 DSKY - a clumsy procedure everyone wanted to delete if possible.
-I think Paul Pixley is the commended for finally getting MIT's
+I think Paul Pixley is to be commended for finally getting MIT's
 agreement to this crew procedure simplification.
 
 The actual values to be used initially - that is, the pre-launch
