Requote quotes in YAML header, typos, use unicode superscript 2

--- a/68-PA-T-162A.md
+++ b/68-PA-T-162A.md
@@ -3,10 +3,10 @@ layout: tindallgram
 date: Jul 23 1968
 from: PA/Chief, Apollo Data Priority Coordination
 serial: 68-PA-T-162A
-subject: \"C\" Mission Retrofire and Reentry Mission Techniques Meeting
+subject: "\"C\" Mission Retrofire and Reentry Mission Techniques Meeting"
 tags:
     - MIT
-    - deborbit
+    - deorbit
     - retrofire
     - reentry
     - SPS
@@ -26,7 +26,7 @@ The retrofire will be targeted for a half-lift reentry.
 
 2.  It has been established that the G&N is mandatory for performing
 a hybrid deorbit; thus, if the G&N has failed and the service module
-RCS remaining has falled below the return-line limits, the only remaining
+RCS remaining has fallen below the return-line limits, the only remaining
 system for retrofire is SPS using SCS control.  Accordingly, there is a
 mission rule that retrofire will be performed to land in the next best
 planned recovery area (PLA).
@@ -55,5 +55,5 @@ were designed.
 
 6.  IMU PIPA and gyro drift compensation values are monitored continuously
 by MCC-H.  It has been established that if the values currently
-loaded in the G&N are in error by more than .003 ft/sec^2 and .075°/hr,
+loaded in the G&N are in error by more than .003 ft/sec² and .075°/hr,
 they will be updated in the CMC.
