Requote quotes in YAML header, fix typo

--- a/68-PA-T-167A.md
+++ b/68-PA-T-167A.md
@@ -3,7 +3,7 @@ layout: tindallgram
 date: Jul 24 1968
 from: PA/Chief, Apollo Data Priority Coordination
 serial: 68-PA-T-167A
-subject: July 19 \"C\" Rendezvous Mission Techniques Meeting
+subject: "July 19 \"C\" Rendezvous Mission Techniques Meeting"
 tags:
     - NCC2
     - NCC1
@@ -41,4 +41,4 @@ flying a full duration mission.
 
 The changes to the mission techniques are relatively minor and it is
 probable that it will not be necessary to reissue the entire document.
-Rather than that, will will probably distribute change pages of some sort.
+Rather than that, we will probably distribute change pages of some sort.
