Requote quotes in YAML header

--- a/68-PA-T-54A.md
+++ b/68-PA-T-54A.md
@@ -3,7 +3,7 @@ layout: tindallgram
 date: Mar 7 1968
 from: PA/Chief, Apollo Data Priority Coordination
 serial: 68-PA-T-54A
-subject: Sixth \"C\" Mission Rendezvous Mission Techniques Meeting
+subject: "Sixth \"C\" Mission Rendezvous Mission Techniques Meeting"
 tags:
     - SPS
     - PNGCS
