Requote quotes in YAML header

--- a/68-PA-T-99A.md
+++ b/68-PA-T-99A.md
@@ -3,7 +3,7 @@ layout: tindallgram
 date: May 10 1968
 from: PA/Chief, Apollo Data Priority Coordination
 serial: 68-PA-T-99A
-subject: \"C\" rendezvous open item clean up
+subject: "\"C\" rendezvous open item clean up"
 tags:
     - rendezvous
     - TPI
