Remove escaping of quotes in subject
They are not needed since string as a whole isn't quoted, and cause
incorrect rendering in the list on the home page.

--- a/70-FA-T-16.md
+++ b/70-FA-T-16.md
@@ -3,7 +3,7 @@ layout: tindallgram
 date: Feb 19 1970
 from: FA/Chairman, Apollo Spacecraft Software Configuration Control Board
 serial: 70-FA-T-16
-subject: \"For whom does the bell toll?\" ... \"Delta Guidance\" ... \"Oh!\"
+subject: "For whom does the bell toll?" ... "Delta Guidance" ... "Oh!"
 ---
 A couple of years ago, before any of the lunar flights, GCD started looking into
 improvements in the LM descent guidance and navigation (G&N) computer programs
