--- a/66-FM1-100.md
+++ b/66-FM1-100.md
@@ -24,8 +24,8 @@ the maneuver has been executed.
 2. Logic is being introduced into the rendezvous navigation program
 (i.e., the orbit determination used during rendezvous) which, in effect,
 edits the observational data automatically. Specifically, if the change
-in both the computed velocity magnitude and the commputed position of the
-spacecraft is less than some pre-established amommt due to the processing
+in both the computed velocity magnitude and the computed position of the
+spacecraft is less than some pre-established amount due to the processing
 of new observational data, that data is adjudged to be good and is automatically 
 included in the solution. If the change, in either of these
 quantities is in excess of some larger pre-established amount, the data
@@ -35,7 +35,7 @@ limits, the data is accepted and used, but the alarm light would be lit.
 
 3. MIT was directed not to provide a mode for utilizing Alignment
 Optical Telescope (AOT) data in the rendezvous navigation. This had been
-tentativel suggested for use in the event of a rendezvous radar failure
+tentatively suggested for use in the event of a rendezvous radar failure
 but, based: on the likelihood that the AOT data would not be of any value,
 it was decided not to complicate the program to permit its use.
 
@@ -79,7 +79,7 @@ since there appears to be no requirement for this, whatever it is.
 
 10. As usual, the question of navigation (i.e., orbit determination)
 in earth orbit came up again. We previously had directed MIT not to include 
-this capability in the AS-207/208 mission programs since·it is not
+this capability in the AS-207/208 mission programs since it is not
 required for the lunar mission. However, they, and some MSC people, feel
 it is desirable to provide this capability in order to obtain further
 experience with the process prior to going to the moon. Thus, this is
@@ -90,8 +90,8 @@ will only be used to obtain CDU angles to be transmitted on the downlink
 and they will not be used in the navigation program.
 
 Norm Sears estimates that the orbit determination process should 
-be comp!eted within about ten seconds of accepting an observation. Also,
-he would liketo establish a procedure whereby data points are obtained
+be completed within about ten seconds of accepting an observation. Also,
+he would like to establish a procedure whereby data points are obtained
 at the rate of about one per minute.
 
 11. MIT was directed to delete the guidance reference release (GRR) 
@@ -108,7 +108,7 @@ to having it perform automatically. Another specific example is the
 amount of data which must be input to the computer prior to making a maneuver, 
 including such things as spacecraft weight and inertia, engine
 trim angles, tailoff, spacecraft configuration (docked or undocked), and
-level of rate response to hand controller inputs. It eould certainly
+level of rate response to hand controller inputs. It would certainly
 be desirable, if possible, to eliminate as many of these inputs as possible, 
 either by putting them in fixed memory--if that is a reasonable
 thing to do--or by deleting them altogether. There is some question in
