--- a/66-FM1-104.md
+++ b/66-FM1-104.md
@@ -49,7 +49,7 @@ shape here.
 Finally, regarding current status, there are some unresolved problems
 associated with this retargetting which MIT is currently addressing.
 For example, if an abort occurs early in descent, the LM will be near
-50,000 feet with orbital velocity. The current insterion altitude is
+50,000 feet with orbital velocity. The current insertion altitude is
 60,000 feet. Thus, the spacecraft would have to make a large altitude
 change with little increase in velocity, which would obviously demand
 some rather wild gyrations of the spacecraft--both highly undesirable
