--- a/66-FM1-68.md
+++ b/66-FM1-68.md
@@ -45,7 +45,7 @@ with IBM for the MCC/RTCC, which has enabled us to know the current
 status of the programs as they develop to identify where our problem 
 areas were and to evaluate quickly and accurately whether program 
 changes could be made without schedule impact. Dick gave an excellent 
-infomal briefing of this technique, which has served both IBM and
+informal briefing of this technique, which has served both IBM and
 NASA wonderfully, and I hope and expect Mr. Copps will draw heavily 
 on this experience in setting up a similar system at MIT. We have 
 offered every assistance to him in this matter.
