--- a/66-FM1-70.md
+++ b/66-FM1-70.md
@@ -11,7 +11,7 @@ was for the AS-504 (AS-207/208) spacecraft computer programs. Although
 we had a number of very fruitful discussions with MIT people,
 such as Ed Copps, Dick Battin, John Dahlen, and Bob Mallard, on this
 subject, we really did not find out what we wanted to know. However,
-I am very encouraged to see the enhusiasm and vigor with which Ed
+I am very encouraged to see the enthusiasm and vigor with which Ed
 Copps is attacking this problem.
 
 Ed has set June 3, 1966, as a target for getting out the first cut at
