--- a/66-FM1-75.md
+++ b/66-FM1-75.md
@@ -8,7 +8,7 @@ subject: Apollo spacecraft computer programs--or, a bucket of worms
 
 Well, I just got back from MIT  with my weekly quota of new ulcers, which
 I thought might interest you. We spent one day discussing the AS-2O4
-situation, another on AS-501 and AS-502, and the tnird day primarily
+situation, another on AS-501 and AS-502, and the third day primarily
 on crew procedures associated with the LEM lunar rendezvous crew timeline. 
 I will give you my impression on each of these things, but first
 I would like to let you know that Ed Copps is coming down on June 16
@@ -55,7 +55,7 @@ certainly a very unsatisfactory situation.
 MIT presented an abbreviated test plan for verification of this program, 
 and it is my impression that the tests listed were to serve as part, if 
 not all, of the formal verification and acceptance demonstration proposed 
-by MIT. The list presented was not at all definttive but only described 
+by MIT. The list presented was not at all definitive but only described
 the runs in very general terms. The list consisted of twelve tests primarily 
 designed to check capability of the program to support a nominal 
 mission; it was estimated that these runs could be completed within four 
@@ -68,7 +68,7 @@ be formally documented, although Alex Kosmala says all this material
 will be readily available on file. What a shame to have to accept a situation 
 like that, but I suppose we have no real choice now.
 
-It had been the i.ntention to prepare the B release program for spacecraft 
+It had been the intention to prepare the B release program for spacecraft
 systems tests to be carried out in the altitude chamber at the Cape. 
 As I noted before, it was desired on June 8. Aaron Cohen ascertained 
 that June 23 was the very latest date this release could be made without 
@@ -79,7 +79,7 @@ Thus, you see it is evident that a program, flight-worthy in any sense,
 cannot be made available in time for spacecraft systems tests. In order 
 to avoid the schedule slip, the Apollo Spacecraft Program Office (ASPO) 
 decided to accept a program tape release for rope manufacture on June 23,
-using the best program assembly MTT has had up ko that time.
+using the best program assembly MTT has had up to that time.
 
 The final flight tape must be released for rope manufacture at some time 
 between July 15 and August 8. Actual freezing of the flight program 
@@ -91,7 +91,7 @@ desirable quality. It will not have undergone sufficient verification
 tests and will very likely still contain program bugs. Following the 
 flight program test release, extensive effort will be carried out to 
 determine the limitations and inadequacies of the program in order that 
-operational procedures may be esbablished to work around them. Hopefully, 
+operational procedures may be established to work around them. Hopefully,
 none of these deficiencies will be so serious that the flight
 may not be carried out on schedule.
 ￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼￼
@@ -123,7 +123,7 @@ an interesting proposal, I thought, since it is so obviously so unacceptable.
 After recovering from our complete shock, we started looking into 
 the alternatives available to us and came upon one which made some of us 
 wonder why we weren't doing it that way in the First place; i.e., just 
-using the AS-202 program as is with only minor madifications, such as 
+using the AS-202 program as is with only minor modifications, such as
 changing a few of the constants. Theoretically, this should not only
 put us on schedule, but maybe ahead of schedule. An effort has been
 going on at MSC, under the leadership of Carl Huss, to determine just
@@ -146,7 +146,7 @@ about two weeks.
 
 One most significant action was taken with regard to the concentric 
 flight plan. It was the unanimous agreement of MSC and MIT personnel 
-involved in this work that the concentric flight plan to be prograrmned 
+involved in this work that the concentric flight plan to be programmed
 for the Apollo guidance computer will be as it now exists in both the 
 Rendezvous Analysis Branch and MIT. It is recognized that there are 
 certain limitations to its use wherein under dispersed conditions it 
@@ -155,7 +155,7 @@ proper use of the input controls by the pilot--changing various parameters--it
 is possible to arrive at a solution if one is available. Accordingly, 
 it was not felt to be fruitful nor would there appear to be 
 time to permit further refinement of this formulation, and so we decided 
-to proceed as noted with MSC accepting full respmsibility for these 
+to proceed as noted with MSC accepting full responsibility for these
 deficiencies, Our task from now on, then, is to conduct sufficient 
 analysis to identify these deficiencies and to provide onboard and 
 ground backup procedures to take care of them.
@@ -163,7 +163,7 @@ ground backup procedures to take care of them.
 Finally, if you are still with me, you hardy reader, let me tell you 
 what I intend to put maximum effort on next. I in willing to bet that 
 we are going to be told that MET is behind schedule on AS-207/208 and 
-maybe AS-503 and AS-504. On the obher hand, unless things change, we 
+maybe AS-503 and AS-504. On the other hand, unless things change, we
 can probably expect to see the flight schedule accelerated, making the 
 situation even worse. Although it is a pity to reduce the potential.
 of this really sophisticated guidance system below its maximum, I see
