--- a/66-FM1-78.md
+++ b/66-FM1-78.md
@@ -39,7 +39,7 @@ presented us with four documented recommendations for deletion of new
 requirements which, if accepted by MSC, would permit using the AS-204
 program. These changes are as follows:
 
-a. Side-force computations during launch phase. It is anticiplated
+a. Side-force computations during launch phase. It is anticipated
 that we will accept MIT's recommendation and delete this requirement.
 
 b. The capability for the crew to orient the spacecraft during
@@ -66,14 +66,14 @@ would provide this new attitude control capability. Since the AS-204
 program completely absorbs the available computer storage, it is necessary 
 that some processor be eliminated if this change is to be made.
 MIT is recommending that the processor to be eliminated be a non-flight 
-program used for prelaunch activity rather tham reducing the in-flight 
+program used for prelaunch activity rather than reducing the in-flight
 capability of the guidance system. This certainly seems logical to me, 
 also. Therefore, it would be included in one of the six rope modules 
 which is otherwise devoted entirely to preflight pad activity. Upon 
 completion of the development of this processor, a seventh rope would 
 be manufactured to replace one of the six original ropes at some time
 in the midst of the preflight pad activity after the spacecraft tests 
-requiring that rope have been conpleted, Unless the flight schedule 
+requiring that rope have been completed, Unless the flight schedule
 slips, it would not be possible to supply the final version of the flight 
 program--that is, all six rope modules in their final configuration--on 
 schedule.
@@ -98,7 +98,7 @@ We were told that somebody in the Flight Control Division
 is coordinating all of this MCC support, although I personally had never
 heard of it before and neither had Carl Huss.
 
-In summary, it is anticpated that at least two of the four known requests
+In summary, it is anticipated that at least two of the four known requests
 for modification to the AS-204 program to support AS-205 shall be
 deleted, with a third (item "b" above) as a possible candidate. The
 fourth and biggest change will probably have to be made and, as noted
@@ -122,12 +122,12 @@ Although we did not satisfy our primary objective--that is, schedule improvement
 this occasion, the meeting was extremely valuable in these 
 other respects.
 
-_AS-501_: One entire day aws spent discussing the AS-501 program, which 
+_AS-501_: One entire day was spent discussing the AS-501 program, which
 is also slated for one-month late delivery. As reported in a previous￼￼
 note to you, our apparent best approach for the AS-501 and 502 programs
 was to use the AS-202 program with minimum modification. This is the 
 course of action we have adopted and were thus able to improve the schedule 
-froma  three-month late delivery to a one-month late delivery. (Note: 
+from a three-month late delivery to a one-month late delivery. (Note:
 It is not entirely certain if a "one-month late delivery" is truly that
 since it is highly likely that the AS-202 program could be used for initial
 spacecraft checkout at the Cape with very little loss of efficiency
